--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tododb
-spring.datasource.username=username
-spring.datasource.password=mysqlpass
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_list
+spring.datasource.username=root
+
