--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_list
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database=MYSQL
-spring.jpa.hibernate.ddl-auto=update  //DBにテーブルが定義されていなくてもテーブルが作成される
+#DBにテーブルが定義されていなくてもテーブルが作成される
+spring.jpa.hibernate.ddl-auto=update
